fixed overflow issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,7 +83,7 @@
 
 #__next {
     @apply h-full;
-    @apply overflow-x-hidden;
+
         
 }
 
